# wormi-re

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Readme.md  pyproject.toml
reports/: README.md  vh-data-validation-semantic-1023-check-2026-05-19.json  vh-data-validation-semantic-cache-check-2026-05-19.json  vh-data-validation-taskaware-split-2026-05-20.json  vh-paperlike-default-validation-2026-05-26.json  vh-paperlike-stage2-hang-diagnosis-2026-05-27.md  vh-reproduction-progress-2026-05-19.md  vh-stage2-meta-learning-clean-vs-seqmeta-2026-05-27.md
sh/: wormi-auto-eval-after-stage2.sh  wormi-backup-before-vh-paperlike.sh  wormi-build-vh-data.sh  wormi-build-vh-wormi.sh  wormi-clean-checkpoints-after-prebackup.sh  wormi-eval-paperlike-tmow-compact-aa-fill17.sh  wormi-eval-vh-rollout.sh  wormi-eval-vh-table1.sh  wormi-launch-paperaligned-stage1.sh  wormi-launch-paperaligned-stage2.sh  wormi-record-aa-fill17-eval.py  wormi-run-aa-bindfix-quick-after-current.sh  wormi-run-paperaligned-eval-detached.sh  wormi-stage1-v2-fixed-tmux.sh  wormi-stage2-beta-retry-detached.sh  wormi-train-vh-world.sh  wormi-train-vh-wormi-background.sh  wormi-train-vh-wormi.sh  wormi-upload-google-drive.sh  wormi-vh-paperlike-tmow-compact-full-tmux.sh  wormi-vh-paperlike-tmow-compact-full.sh  wormi-vh-paperlike-tmow-compact-status.sh  wormi-vh-paperlike-v2-fixed-full-tmux.sh
tools/: build_alfworld_dataset.py  build_tmow60.py  build_virtualhome_dataset.py  build_virtualhome_dataset_realtasks.py  build_virtualhome_dataset_tmow_compact.py  build_virtualhome_dataset_wormi.py  tmow_const.py  (+15 more)
(+103 files in other folders)
